--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
             <a href="#"class="linkNav">Contact</a><br>
         </div>
         
-        <div id="mainBody">
+        <div id="mainBody"><div id="header">
             <button id="sideBarButton" onclick="slidingNav()"><img src="image/list.svg"></button> 
-            <div id="header">header</div>
-            <div id="content1" class="mainContentHome"><div id="overlay1"class="overlay"><p>testing this is the text</p></div></div>
+            <h1>Joen.</h1></div>
+            <div id="content1" class="mainContentHome"><div id="overlay1"class="overlay">
+                <div id="overlaytext1">
+                    <h1>My Portfolio</h1>
+                    <p>testing this is the text</p>
+            </div>
+            </div>
+        </div>
             <div id="content2"class="mainContentHome"><div id="overlay2"class="overlay"></div></div>
             <div id="content3"class="mainContentHome"><div id="overlay3"class="overlay"></div></div>
             <div id = "footer"></div>
