--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <meta name="viewport" content="width=device-width, height=device-height,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="one.js"></script>
@@ -25,7 +25,8 @@
             <div id="content1" class="mainContentHome"><div id="overlay1"class="overlay">
                 <div id="overlaytext1">
                     <h1>My Portfolio</h1>
-                    <p>testing this is the text</p>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+
             </div>
             </div>
         </div>
@@ -68,7 +69,7 @@
                 </div>
 
             </div></div>
-            <div id="content3"class="mainContentHome"><div id="overlay3"class="overlay"></div></div>
+           <!--  <div id="content3"class="mainContentHome"><div id="overlay3"class="overlay"></div></div>-->
             <div id = "footer"></div>
         </div><br>
        
