--- a/indexTwo.html
+++ b/indexTwo.html
@@ -13,7 +13,7 @@ href="https://fonts.googleapis.com/css?family="><link rel="preconnect" href="htt
 <head></head>
 
 <body>
-<video autoplay muted id = "vidBackground"> <source src="video/self.mp4" type="video/mp4"></video>
+<video autoplay muted playsinline id = "vidBackground"> <source src="video/self.mp4" type="video/mp4"></video>
 <div id="blurCover"></div>
 <div id="pushUP">
 <div class = "headerText" id = "headerText">
