skill cards add

--- a/indexTwo.html
+++ b/indexTwo.html
@@ -39,10 +39,37 @@ href="https://fonts.googleapis.com/css?family="><link rel="preconnect" href="htt
             </div>
             <div class="roundImage" id="homeFace"></div>
     </div>
+    
     </div>
-    <div class="container" id = "cont2"></div>
+    <div class="container" id = "cont2"><div id ="introductorytext">
+        <h1>"Fearfully made"</h1>
+
+        <p>
+            It may sound pretentious, but its true. Made in 2001, I daydream for a living and work for a dream.
+            I love working hard to create cool stuff like this website.
+        </p>
+    </div></div>
 </div>
-<div class = "flexcontainer" id="section2"></div>
+<div class = "flexcontainer" id="section2">
+    <div class="container" id = "cont3">
+        <div id="skilltext">
+            <h1>My <div id = "animateskilltext">Skills</div></h1>
+            <p>Computing, 3D modelling.</p>
+        </div>
+    </div>
+    <div class="container" id = "cont4">
+        <div id="skillholder">
+        <div id="cardflex">
+            <div class="cardskill" id="card1"><h1>.py</h1></div>
+            <div class="cardskill" id="card2"><h1>.js</h1></div>
+            <div class="cardskill" id="card3"><h1>.html</h1></div>
+            <div class="cardskill" id="card4"><h1>.css</h1></div>
+            <div class="cardskill" id="card5"><h1>.ide</h1></div>
+            <div class="cardskill" id="card6"><h1>CAD</h1></div>
+        </div>
+    </div>
+    </div>
+    </div>
 <div class = "flexcontainer" id="section3"></div>
 </div>
 </div>
